# positions/serializers.py
@@ -1,0 +1,7 @@
+from rest_framework import serializers
+from .models import Position
+
+class PositionSerializer(serializers.ModelSerializer):
+    class Meta:
+        model = Position
+        fields = ['id', 'position_name', 'company_name', 'position_url', 'created_at', 'updated_at'] 
